--- a/e18382lab02.ipynb
+++ b/e18382lab02.ipynb
@@ -9,6 +9,30 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Weerarathne L.D."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "E/18/382"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lab 02 - CO544"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -143,6 +167,7 @@
    ],
    "source": [
     "# Using optimal bin size by Freedman-Diaconis rule\n",
+    "# equation is: binWidth = 2 * IQR * (n ** (-1/3))\n",
     "\n",
     "binWidth = 2 * (np.percentile(recent_year_df['gdpPercap'], 75) - np.percentile(recent_year_df['gdpPercap'], 25)) * (len(recent_year_df['gdpPercap']) ** (-1/3))\n",
     "datarng = max(recent_year_df['gdpPercap']) - min(recent_year_df['gdpPercap'])\n",
